schematic wiring moved to a builder class, connection confirmation for crossing wires

--- a/src/main/resources/prototypedesigner/PrototypeDesigner/SchematicsView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/SchematicsView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -113,4 +114,11 @@
             </children>
         </VBox>
     </right>
+   <bottom>
+      <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <buttons>
+            <Label fx:id="coordinateLabel" />
+         </buttons>
+      </ButtonBar>
+   </bottom>
 </BorderPane>
