--- a/src/main/resources/prototypedesigner/PrototypeDesigner/MenuView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/MenuView.fxml
@@ -4,12 +4,20 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 
-
-<MenuBar xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="prototypedesigner.PrototypeDesigner.controller.MenuController">
+<MenuBar xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="prototypedesigner.PrototypeDesigner.controller.MenuController">
   <menus>
     <Menu mnemonicParsing="false" text="File">
       <items>
-        <MenuItem mnemonicParsing="false" text="Close" />
+            <MenuItem mnemonicParsing="false" text="New Project" />
+            <MenuItem mnemonicParsing="false" text="Open Project" />
+        <MenuItem mnemonicParsing="false" text="Save Project" />
+            <MenuItem mnemonicParsing="false" text="Save As..." />
+            <Menu mnemonicParsing="false" text="Export">
+              <items>
+                <MenuItem mnemonicParsing="false" text="BOM as Text" />
+              </items>
+            </Menu>
+            <MenuItem mnemonicParsing="false" text="Close" />
       </items>
     </Menu>
     <Menu mnemonicParsing="false" text="Edit">
