--- a/src/main/resources/prototypedesigner/PrototypeDesigner/MenuView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/MenuView.fxml
@@ -8,16 +8,16 @@
   <menus>
     <Menu mnemonicParsing="false" text="File">
       <items>
-            <MenuItem mnemonicParsing="false" text="New Project" />
-            <MenuItem mnemonicParsing="false" text="Open Project" />
-        <MenuItem mnemonicParsing="false" text="Save Project" />
-            <MenuItem mnemonicParsing="false" text="Save As..." />
+            <MenuItem mnemonicParsing="false" text="New Project" onAction="#newProject" />
+            <MenuItem mnemonicParsing="false" text="Open Project" onAction="#open" />
+        <MenuItem mnemonicParsing="false" text="Save Project" onAction="#save" />
+            <MenuItem mnemonicParsing="false" text="Save As..." onAction="#saveAs" />
             <Menu mnemonicParsing="false" text="Export">
               <items>
-                <MenuItem mnemonicParsing="false" text="BOM as Text" />
+                <MenuItem mnemonicParsing="false" text="BOM as Text" onAction="#exportBom" />
               </items>
             </Menu>
-            <MenuItem mnemonicParsing="false" text="Close" />
+            <MenuItem mnemonicParsing="false" text="Close" onAction="#exit" />
       </items>
     </Menu>
     <Menu mnemonicParsing="false" text="Edit">
@@ -27,7 +27,7 @@
     </Menu>
     <Menu mnemonicParsing="false" text="Help">
       <items>
-        <MenuItem mnemonicParsing="false" text="About" />
+        <MenuItem mnemonicParsing="false" text="About" onAction="#about" />
       </items>
     </Menu>
   </menus>
