--- a/src/main/resources/prototypedesigner/PrototypeDesigner/MenuView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/MenuView.fxml
@@ -23,6 +23,7 @@
     </Menu>
     <Menu mnemonicParsing="false" text="Edit">
       <items>
+        <MenuItem mnemonicParsing="false" text="Project Info" onAction="#projectInfo" />
         <MenuItem mnemonicParsing="false" text="Delete" />
       </items>
     </Menu>
