--- a/src/main/resources/prototypedesigner/PrototypeDesigner/ProtoboardView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/ProtoboardView.fxml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="prototypedesigner.PrototypeDesigner.controller.ProtoboardController">
@@ -19,7 +28,7 @@
          <content>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <Canvas fx:id="protoboardCanvas" height="200.0" onMouseClicked="#onClick" width="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Canvas fx:id="protoboardCanvas" height="400.0" onMouseClicked="#onClick" width="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
          </content>
@@ -54,11 +63,7 @@
                <content>
                   <VBox>
                      <children>
-                        <ToggleButton fx:id="resistorToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resistor">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="buttonMode" />
-                           </toggleGroup>
-                        </ToggleButton>
+                        <ToggleButton fx:id="resistorToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resistor" toggleGroup="$buttonMode" />
                         <ToggleButton fx:id="ceramicCapToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Ceramic Cap." toggleGroup="$buttonMode" />
                         <ToggleButton fx:id="filmCapToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Film Capacitor" toggleGroup="$buttonMode" />
                         <ToggleButton fx:id="elcoToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Electrolytic" toggleGroup="$buttonMode" />
@@ -78,11 +83,56 @@
                   </VBox>
                </content>
             </ScrollPane>
-            <Label text="Component Layer" />
-            <Slider fx:id="layerSlider" />
          </children></VBox>
    </left>
    <bottom>
-      <ButtonBar BorderPane.alignment="CENTER" />
+      <ButtonBar BorderPane.alignment="CENTER">
+         <buttons>
+            <Label text="Component Layer" />
+            <Slider fx:id="layerSlider" />
+         </buttons></ButtonBar>
    </bottom>
+   <right>
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane hgap="3.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="3.0" VBox.vgrow="NEVER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Rows:" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Label>
+                  <Label text="Columns:" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Resize" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
+                  <TextField maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
+                  <TextField maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+            <Separator />
+            <Label text="Trace links:" />
+            <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
+            <Label text="Via links:" />
+            <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
+   </right>
 </BorderPane>
