--- a/src/main/resources/prototypedesigner/PrototypeDesigner/StripboardView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/StripboardView.fxml
@@ -1,38 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1" fx:controller="prototypedesigner.PrototypeDesigner.controller.StripboardController">
+<BorderPane xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="prototypedesigner.PrototypeDesigner.controller.StripboardController">
    <center>
-      <ScrollPane fx:id="scrollPane" hbarPolicy="ALWAYS" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
+      <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="ALWAYS" vbarPolicy="ALWAYS" BorderPane.alignment="CENTER">
          <content>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <children>
-                  <Canvas fx:id="stripboardCanvas" height="200.0" onMouseClicked="#onClick" width="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Canvas fx:id="stripboardCanvas" height="400.0" onMouseClicked="#onClick" width="400.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
          </content>
       </ScrollPane>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox maxHeight="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <children>
-            <ToggleButton mnemonicParsing="false" text="✂ Cut Stripe" fx:id="cutToggle" >
+            <ToggleButton fx:id="cutToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="✂ Cut Strip">
                <toggleGroup>
                   <ToggleGroup fx:id="buttonMode" />
                </toggleGroup>
             </ToggleButton>
-            <ToggleButton mnemonicParsing="false" text="💻 Microchip" toggleGroup="$buttonMode" fx:id="chipToggle" />
-            <ToggleButton mnemonicParsing="false" text="✎ Wire link" toggleGroup="$buttonMode" fx:id="linkToggle" />
+            <ToggleButton fx:id="chipToggle" mnemonicParsing="false" text="💻 Microchip" toggleGroup="$buttonMode" />
+            <ToggleButton fx:id="linkToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="✎ Wire link" toggleGroup="$buttonMode" />
+            <Separator />
+            <Label text="Components from schematic:" />
+            <TableView>
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
+            <Label text="Placed on stripboard:" />
+            <TableView>
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
          </children>
       </VBox>
    </left>
@@ -44,4 +67,43 @@
          </buttons>
       </ButtonBar>
    </bottom>
+   <right>
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane hgap="3.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="3.0" VBox.vgrow="NEVER">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#resizeBoard" text="Resize" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
+                  <TextField fx:id="colCountField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="rowCountField" GridPane.columnIndex="1" />
+                  <Label text="Rows (strips):" GridPane.halignment="RIGHT" />
+                  <Label text="Columns:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
+            <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
+            <Label text="Strips:" />
+            <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
+            <Label text="Vias (links):" />
+            <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
+   </right>
 </BorderPane>
