--- a/src/main/resources/prototypedesigner/PrototypeDesigner/ProtoboardView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/ProtoboardView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -14,6 +15,8 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -35,19 +38,32 @@
       </ScrollPane>
    </center>
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <ToggleButton fx:id="linkToggle" mnemonicParsing="false" text="🖉 Link Dots">
-               <toggleGroup>
-                  <ToggleGroup fx:id="buttonMode" />
-               </toggleGroup>
-            </ToggleButton>
-            <ToggleButton fx:id="cutToggle" mnemonicParsing="false" text="✂ Cut Link" toggleGroup="$buttonMode" />
-            <ToggleButton fx:id="microchipToggle" mnemonicParsing="false" text="💻 Microchip" toggleGroup="$buttonMode" />
-            <ToggleButton fx:id="viaToggle" mnemonicParsing="false" text="Via (Link)" toggleGroup="$buttonMode" />
-            <Label text="Orientation:" />
             <HBox>
                <children>
+                  <ToggleButton fx:id="linkToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="🖉 Link Dots" HBox.hgrow="ALWAYS">
+                     <toggleGroup>
+                        <ToggleGroup fx:id="buttonMode" />
+                     </toggleGroup>
+                  </ToggleButton>
+                  <ToggleButton fx:id="cutToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="✂ Cut Link" toggleGroup="$buttonMode" HBox.hgrow="ALWAYS" />
+                  <ToggleButton fx:id="viaToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Via (Link)" toggleGroup="$buttonMode" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <Label text="Components from schematic:" />
+            <TableView fx:id="schComponentTable">
+               <columns>
+                  <TableColumn fx:id="schCompIdColumn" prefWidth="75.0" text="ID" />
+                  <TableColumn fx:id="schCompTypeColumn" prefWidth="75.0" text="Type" />
+                  <TableColumn fx:id="schCompValueColumn" prefWidth="75.0" text="Value" />
+                  <TableColumn fx:id="schCompAddColumn" maxWidth="36.0" prefWidth="36.0" text="Add" />
+               </columns>
+            </TableView>
+            <HBox>
+               <children>
+                  <Label maxHeight="1.7976931348623157E308" text="Orientation:" />
                   <ToggleButton fx:id="leftToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="←" HBox.hgrow="ALWAYS">
                      <toggleGroup>
                         <ToggleGroup fx:id="orientationGroup" />
@@ -58,8 +74,23 @@
                   <ToggleButton fx:id="rightToggle" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="→" toggleGroup="$orientationGroup" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
-            <Label text="Components:" />
-            <ScrollPane hbarPolicy="NEVER">
+            <HBox>
+               <children>
+                  <Label maxHeight="1.7976931348623157E308" text="Pinout:" />
+                  <ComboBox fx:id="pinoutBox" editable="true" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+            <Label text="Placed on protoboard:" />
+            <TableView fx:id="protoComponentTable">
+               <columns>
+                  <TableColumn fx:id="protoCompIdColumn" prefWidth="75.0" text="ID" />
+                  <TableColumn fx:id="protoCompTypeColumn" prefWidth="75.0" text="Type" />
+                  <TableColumn fx:id="protoCompValueColumn" prefWidth="75.0" text="Value" />
+                  <TableColumn fx:id="protoCompRemoveColumn" prefWidth="75.0" text="Remove" />
+               </columns>
+            </TableView>
+            <Label text="Components:" visible="false" />
+            <ScrollPane hbarPolicy="NEVER" maxHeight="0.0" visible="false" VBox.vgrow="NEVER">
                <content>
                   <VBox>
                      <children>
@@ -119,18 +150,32 @@
             </GridPane>
             <Separator />
             <Label text="Trace links:" />
-            <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+            <TreeTableView fx:id="traceDotTable" prefHeight="200.0" prefWidth="200.0" showRoot="false">
               <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
+                <TreeTableColumn fx:id="traceTypeColumn" prefWidth="75.0" text="Type" />
+                <TreeTableColumn fx:id="traceXColumn" prefWidth="75.0" text="X" />
+                  <TreeTableColumn fx:id="traceYColumn" prefWidth="75.0" text="Y" />
               </columns>
-            </TableView>
+            </TreeTableView>
             <Label text="Via links:" />
-            <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+            <TableView fx:id="linkTable" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
               <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
+                  <TableColumn prefWidth="75.0" text="From">
+                     <columns>
+                      <TableColumn fx:id="viaFromXColumn" prefWidth="75.0" text="X" />
+                      <TableColumn fx:id="viaFromYColumn" prefWidth="75.0" text="Y" />
+                     </columns>
+                  </TableColumn>
+                  <TableColumn prefWidth="75.0" text="To">
+                     <columns>
+                        <TableColumn fx:id="viaToXColumn" prefWidth="75.0" text="X" />
+                        <TableColumn fx:id="viaToYColumn" prefWidth="75.0" text="Y" />
+                     </columns>
+                  </TableColumn>
               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
             </TableView>
          </children>
       </VBox>
