--- a/src/main/resources/prototypedesigner/PrototypeDesigner/SchematicsView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/SchematicsView.fxml
@@ -83,14 +83,11 @@
                 <Label text="Bill of Materials:" />
                 <TableView fx:id="componentTable" editable="true" VBox.vgrow="ALWAYS">
                     <columns>
-                        <TableColumn fx:id="componentIdColumn" maxWidth="-1.0" minWidth="80.0" prefWidth="-1.0" text="ID" />
-                        <TableColumn fx:id="componentTypeColumn" maxWidth="-1.0" minWidth="80.0" prefWidth="-1.0" text="Type" />
-                        <TableColumn fx:id="componentValueColumn" maxWidth="-1.0" minWidth="80.0" prefWidth="-1.0" text="Value" />
-                  <TableColumn fx:id="deleteComponentColumn" maxWidth="-1.0" minWidth="32.0" prefWidth="-1.0" resizable="false" text="🗑" />
+                        <TableColumn fx:id="componentIdColumn" maxWidth="60.0" minWidth="40.0" prefWidth="-1.0" text="ID" />
+                        <TableColumn fx:id="componentTypeColumn" maxWidth="1.7976931348623157E308" minWidth="80.0" prefWidth="-1.0" text="Type" />
+                        <TableColumn fx:id="componentValueColumn" maxWidth="1.7976931348623157E308" minWidth="80.0" prefWidth="-1.0" text="Value" />
+                  <TableColumn fx:id="deleteComponentColumn" maxWidth="32.0" minWidth="32.0" prefWidth="-1.0" resizable="false" text="🗑" />
                     </columns>
-                    <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                    </columnResizePolicy>
                 </TableView>
                 <Label text="Wiring:" />
                 <TreeTableView fx:id="wireTable" editable="true" showRoot="false" VBox.vgrow="ALWAYS">
