trace and via deletion

--- a/src/main/resources/prototypedesigner/PrototypeDesigner/StripboardView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/StripboardView.fxml
@@ -131,6 +131,7 @@
                 <TableColumn fx:id="linkRowColumn" prefWidth="75.0" text="Row" />
                 <TableColumn fx:id="linkColColumn" prefWidth="75.0" text="Column" />
                   <TableColumn fx:id="linkSpanColumn" prefWidth="75.0" text="Span" />
+                  <TableColumn fx:id="viaDeleteColumn" maxWidth="-Infinity" minWidth="60.0" prefWidth="75.0" text="Delete" />
               </columns>
             </TableView>
          </children>
