--- a/src/main/resources/prototypedesigner/PrototypeDesigner/ProtoboardView.fxml
+++ b/src/main/resources/prototypedesigner/PrototypeDesigner/ProtoboardView.fxml
@@ -155,6 +155,7 @@
                 <TreeTableColumn fx:id="traceTypeColumn" prefWidth="75.0" text="Type" />
                 <TreeTableColumn fx:id="traceXColumn" prefWidth="75.0" text="X" />
                   <TreeTableColumn fx:id="traceYColumn" prefWidth="75.0" text="Y" />
+                  <TreeTableColumn fx:id="traceDeleteColumn" maxWidth="-Infinity" minWidth="60.0" prefWidth="75.0" text="Delete" />
               </columns>
             </TreeTableView>
             <Label text="Via links:" />
@@ -172,6 +173,7 @@
                         <TableColumn fx:id="viaToYColumn" prefWidth="75.0" text="Y" />
                      </columns>
                   </TableColumn>
+                  <TableColumn fx:id="viaDeleteColumn" maxWidth="-1.0" minWidth="55.0" prefWidth="60.0" resizable="false" text="Delete" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
